tests/snapshots/sfc/js/patches__v_model_on_native_input_with_ref.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 219
expression: js_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, withDirectives as _withDirectives, vModelText as _vModelText } from "vue"

import { ref } from 'vue'

export default {
  __name: 'test',
  setup(__props) {

const inputValue = ref('')

return (_ctx, _cache) => {
  return _withDirectives((_openBlock(), _createElementBlock("input", {
      "onUpdate:modelValue": _cache[0] || (_cache[0] = $event => ((inputValue).value = $event))
    }, null, 512 /* NEED_PATCH */)), [ [_vModelText, inputValue.value] ])
}
}

}
